@@ -113,6 +113,7 @@ Frame = include                # Psana::Camera::FrameV1
 FrameFccd = include            # Psana::Camera::FrameFccdConfigV1
 FrameFex = include             # Psana::Camera::FrameFexConfigV1
 GMD = include                  # Psana::Bld::BldDataGMDV0, Psana::Bld::BldDataGMDV1, Psana::Bld::BldDataGMDV2
+Generic1D = include            # Psana::Generic1D::ConfigV0, Psana::Generic1D::DataV0
 GenericPgp = include           # Psana::GenericPgp::ConfigV1
 Gsc16ai = include              # Psana::Gsc16ai::ConfigV1, Psana::Gsc16ai::DataV1
 Imp = include                  # Psana::Imp::ConfigV1, Psana::Imp::ElementV1
