@@ -11,6 +11,10 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-46
+2016-4-14 David Schneider
+- add translator support (with unit test) for generic1d JIRA PSAS-225
+
 Tag: V00-02-45
 2016-4-14 David Schneider
 - add unit test for ocean optics datav3 JIRA PSAS-227
